--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<title>Tirth Shah</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="html5up-highlights/assets/css/main.css" />
 	</head>
 	<body class="is-preload">
 
@@ -27,7 +27,7 @@
 		<!-- One -->
 			<section id="one" class="main special">
 				<div class="container">
-					<span class="image fit primary"><img src="images/pic01.jpg" alt="" /></span>
+					<span class="image fit primary"><img src="html5up-highlights/images/pic01.jpg" alt="" /></span>
 					<div class="content">
 						<header class="major">
 							<h2>Who I am</h2>
@@ -42,7 +42,7 @@
 		<!-- Two -->
 			<section id="two" class="main special">
 				<div class="container">
-					<span class="image fit primary"><img src="images/pic02.jpg" alt="" /></span>
+					<span class="image fit primary"><img src="html5up-highlights/images/pic02.jpg" alt="" /></span>
 					<div class="content">
 						<header class="major">
 							<h2>New Jersey</h2>
@@ -50,11 +50,11 @@
 						<p>These categories highlight some of my notable experiences and accomplishments as I progress on my professional journey, with great ambitions for the future.</p>
 						<ul class="icons-grid">
 							<li>
-								<a href="workexperience.html"><span class="icon solid major fa-briefcase"></span>
+								<a href="html5up-highlights/workexperience.html"><span class="icon solid major fa-briefcase"></span>
 								<h3>Work Experiences</h3></a>
 							</li>
 							<li>
-								<a href="projects.html"><span class="icon solid major fa-code"></span>
+								<a href="html5up-highlights/projects.html"><span class="icon solid major fa-code"></span>
 								<h3>Projects</h3></a>
 							</li>
 							<li>
@@ -74,7 +74,7 @@
 		<!-- Three -->
 			<section id="three" class="main special">
 				<div class="container">
-					<span class="image fit primary"><img src="images/pic03.jpg" alt="" /></span>
+					<span class="image fit primary"><img src="html5up-highlights/images/pic03.jpg" alt="" /></span>
 					<div class="content">
 						<header class="major">
 							<h2>Ambitions and Goals</h2>
@@ -120,12 +120,12 @@
 			</section>
 
 		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
+			<script src="html5up-highlights/assets/js/jquery.min.js"></script>
+			<script src="html5up-highlights/assets/js/jquery.scrollex.min.js"></script>
+			<script src="html5up-highlights/assets/js/jquery.scrolly.min.js"></script>
+			<script src="html5up-highlights/assets/js/browser.min.js"></script>
+			<script src="html5up-highlights/assets/js/breakpoints.min.js"></script>
+			<script src="html5up-highlights/assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
 
 	</body>
