--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 					<span class="image fit primary"><img src="html5up-highlights/images/pic02.jpg" alt="" /></span>
 					<div class="content">
 						<header class="major">
-							<h2>New Jersey</h2>
+							<h2>Professional Highlights</h2>
 						</header>
 						<p>These categories highlight some of my notable experiences and accomplishments as I progress on my professional journey, with great ambitions for the future.</p>
 						<ul class="icons-grid">
@@ -109,9 +109,9 @@
 				</div>
 				<footer>
 					<ul class="icons">
-						<li><a href="#" class="icon brands alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
-						<li><a href="#" class="icon brands alt fa-github"><span class="label">Github</span></a></li>
-						<li><a href="#" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
+						<li><a href="www.linkedin.com/in/tirth-shah1" class="icon brands alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
+						<li><a href="https://github.com/Stryde123" class="icon brands alt fa-github"><span class="label">Github</span></a></li>
+						<li><a href="tirthshah0109@gmail.com" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 					<!--<ul class="copyright">
 						<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li><li>Demo Images: <a href="http://unsplash.com">Unsplash</a></li>
